--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,8 @@ psycopg2==2.7.4
 psycopg2-binary==2.7.4
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
-pyred==0.1.3
-pyspreadsheet==0.0.15
+pyred>=0.1.3
+pyspreadsheet>=0.0.15
 python-dateutil==2.7.2
 pytz==2018.3
 PyYAML==3.12
