--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+dbstream
 enum34>=1.1.6
 google-api-python-client>=1.6.6
 httplib2>=0.11.1
@@ -16,3 +17,4 @@ rsa>=3.4.2
 six>=1.11.0
 uritemplate>=3.0.0
 isoweek>=1.3.3
+googleauthentication >= 0.0.1
