--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,10 @@
-dbstream
+dbstream>=0.0.1
 enum34>=1.1.6
-google-api-python-client>=1.6.6
 httplib2>=0.11.1
 numpy>=1.14.2
-oauth2client>=4.1.2
 pandas>=0.22.0
-psycopg2-binary>=2.7.4
 pyasn1>=0.4.2
 pyasn1-modules>=0.2.1
-pyred>=0.1.3
-pyspreadsheet>=0.0.15
 python-dateutil>=2.7.2
 pytz>=2018.3
 PyYAML>=5.1
